--- a/Multi-step form/index.html
+++ b/Multi-step form/index.html
@@ -12,8 +12,7 @@
   
   <title>Frontend Mentor | Multi-step form</title>
   <link rel="stylesheet" href="style.css" />
-
-
+  <script src="app.js" defer></script>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 <body>
@@ -91,6 +90,7 @@
             placeholder="e.g. +1 234 567 890"
           />
         </form>
+        <div class="grow"></div>
         <div class="btns">
           <button class="next-step" type="submit">Next Step</button>
         </div>
