--- a/Multi-step form/index.html
+++ b/Multi-step form/index.html
@@ -12,7 +12,6 @@
   
   <title>Frontend Mentor | Multi-step form</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="app.js" defer></script>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 <body>
@@ -58,42 +57,39 @@
             Please provide your name, email address, and phone number.
           </p>
         </div>
-        <form>
+        <form id="form">
           <div class="label">
             <label for="name">Name</label>
-            <p class="error">This Field Is Required</p>
+            <p class="error" id="nameError"></p>
           </div>
           <input
-            required
             type="text"
             id="name"
             placeholder="e.g. Stephen King"
           />
           <div class="label">
             <label for="email">Email Address</label>
-            <p class="error">This Field Is Required</p>
+            <p class="error" id="emailError"></p>
           </div>
           <input
-            required
             type="text"
             id="email"
             placeholder="e.g. stephenking@lorem.com"
           />
           <div class="label">
             <label for="phone">Phone Number</label>
-            <p class="error">This Field Is Required</p>
+            <p class="error" id="phoneError"></p>
           </div>
           <input
-            required
             type="tel"
             id="phone"
             placeholder="e.g. +1 234 567 890"
           />
-        </form>
-        <div class="grow"></div>
+          <div class="grow"></div>
         <div class="btns">
           <button class="next-step" type="submit">Next Step</button>
         </div>
+        </form>
       </div>
     </div>
   </div>
@@ -171,5 +167,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Dhruv</a>.
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
